--- a/chat.html
+++ b/chat.html
@@ -7,10 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Chat | Kakao Clone</title>
     <script src="https://kit.fontawesome.com/66fdcee069.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
-    <div class="status bar">
+    <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">
                 13:54
@@ -35,9 +36,9 @@
             <span class="header__icon">
                 <i class="fas fa-search"></i>
             </span>
-            <div class="header__icon">
+            <span class="header__icon">
                 <i class="fas fa-bars"></i>
-            </div>
+        </div>
         </div>
     </header>
     <main class="chat">
@@ -46,7 +47,7 @@
                 Friday, January 11, 2019
             </span>
             <li class="incoming-message message">
-                <img src="imgs/profile.jpg" class="g-avatar message g-avatar" />
+                <img src="imgs/profile.jpg" class="m-avatar message__avatar" />
                 <div class="message__content">
                     <span class="mesaage__author">Best Friend</span>
                     <div class="message_bubble">
