--- a/friends.html
+++ b/friends.html
@@ -7,11 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Freinds | Kakao Clone</title>
     <script src="https://kit.fontawesome.com/66fdcee069.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
     <!-- 상단바 -->
-    <div class="status bar">
+    <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">
                 13:54
@@ -45,18 +46,17 @@
         <header class="friends__header">
             <div class="friends__friend friend friend--lg">
                 <div class="friend__column">
-                    <img src="imgs/profile.jpg" alt="" class="g-avatar friend__avater">
+                    <img src="imgs/profile.jpg" alt="" class="g-avatar friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             Nicolas Serrano
                         </span>
-                        <span class="friend__stauts">
+                        <span class="friend__status">
                             nomadcoders.co
                         </span>
                     </div>
 
                 </div>
-                <img src="imgs/profile.jpg" alt="" class="g-avatar friend__avater">
             </div>
         </header>
         <!-- 플러스 친구 -->
@@ -64,7 +64,7 @@
             <h5 class="friends__plus-title">Plus friend</h5>
             <div class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="imgs/profile.jpg" alt="" class="g-avatar friend__avater">
+                    <img src="imgs/profile.jpg" alt="" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             Plus Friend
@@ -78,12 +78,12 @@
             <h5 class="friends__title">Friends 14</h5>
             <li class="friends__friend friend friend--lg">
                 <div class="friend__column">
-                    <img src="imgs/profile.jpg" alt="" class="g-avatar friend__avater">
+                    <img src="imgs/profile.jpg" alt="" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             Nicolas Serrano
                         </span>
-                        <span class="friend__stauts">
+                        <span class="friend__status">
                             nomadcoders.co
                         </span>
                     </div>
