--- a/find.html
+++ b/find.html
@@ -7,10 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Find | Kakao Clone</title>
     <script src="https://kit.fontawesome.com/66fdcee069.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
-    <div class="status bar">
+    <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">
                 13:54
@@ -81,7 +82,7 @@
             </h5>
             <li class="find__friend friend friend--lg">
                 <div class="friend__column">
-                    <img src="imgs/profile.jpg" alt="" class="g-avatar friend__avater">
+                    <img src="imgs/profile.jpg" alt="" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             Nicolas Serrano
