--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Chats | Kakao Clone</title>
     <script src="https://kit.fontawesome.com/66fdcee069.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="status bar">
+    <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">
                 13:54
@@ -44,19 +45,25 @@
         <ul class="chats__list">
             <li class="chats__chat chat">
                 <a href="chat.html">
-                    <div class="div chat__column">
-                        <img class="chat__avatar g-avatar" src="imgs/profile.jpg" />
-                        <div class="chat__content">
-                            <span class="chat__username">
-                                Lynn
-                            </span>
-                            <span class="chat__preview">
-                                Going home
-                            </span>
+                    <div class="chats__chat friend friend--lg">
+                        <div class="friend__column">
+                            <img src="imgs/profile.jpg" alt="" class="m-avatar friend__avatar">
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    Lynn
+                                </span>
+                                <span class="friend__bottom-text">
+                                    Going home!
+                                </span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="div chat__column">
-                        <span class="chat__timestamp">Yesterday</span>
+                        <div class="friend__column">
+                            <div class="friend__now-listening">
+                                <span class="chat__timestamp">
+                                    March 8
+                                </span>
+                            </div>
+                        </div>
                     </div>
                 </a>
             </li>
@@ -71,6 +78,7 @@
             </li>
             <li class="nav__list-item">
                 <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
                     <i class="fas fa-comment"></i>
                 </a>
             </li>
