--- a/settings.html
+++ b/settings.html
@@ -7,10 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Settings | Kakao Clone</title>
     <script src="https://kit.fontawesome.com/66fdcee069.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
-    <div class="status bar">
+    <div class="status-bar">
         <div class="status-bar__column">
             <span class="status-bar__clock">
                 13:54
@@ -27,7 +28,7 @@
     <header class="header">
         <div class="header__header-column">
             <div class="header__back-btn">
-                <a href="more.html"><i class="fas fa-arrow-left fa-2x"></i></a>
+                <a href="more.html"><i class="fas fa-arrow-left"></i></a>
             </div>
             <h1 class="header__title">Settings</h1>
         </div>
