--- a/friends.html
+++ b/friends.html
@@ -44,7 +44,7 @@
     <main class="friends">
         <!-- 나의 프로필  -->
         <header class="friends__header">
-            <div class="friends__friend friend friend--lg">
+            <div class="friends__friend friend">
                 <div class="friend__column">
                     <img src="imgs/profile.jpg" alt="" class="g-avatar friend__avatar">
                     <div class="friend__content">
@@ -60,8 +60,8 @@
             </div>
         </header>
         <!-- 플러스 친구 -->
-        <div class="div friends__plus">
-            <h5 class="friends__plus-title">Plus friend</h5>
+        <div class="friends__plus">
+            <h5 class="friends__title">Plus friend</h5>
             <div class="friends__friend friend">
                 <div class="friend__column">
                     <img src="imgs/profile.jpg" alt="" class="friend__avatar">
@@ -92,8 +92,8 @@
                     <div class="friend__now-listening">
                         <span>
                             BTS-Intro:What am I to you
+                            <i class="fas fa-play"></i>
                         </span>
-                        <i class="fas fa-play"></i>
                     </div>
                 </div>
             </li>
