--- a/find.html
+++ b/find.html
@@ -76,7 +76,7 @@
                 </li>
             </ul>
         </header>
-        <ul class="fine__recommended">
+        <ul class="find__recommended">
             <h5 class="find__title">
                 Recommended Friends
             </h5>
