--- a/chat.html
+++ b/chat.html
@@ -13,9 +13,9 @@
 <body>
     <div class="status-bar">
         <div class="status-bar__column">
-            <span class="status-bar__clock">
+            <div class="status-bar__clock">
                 13:54
-            </span>
+            </div>
         </div>
         <div class="status-bar__column">
             <i class="fas fa-clock"></i>
