--- a/chat.html
+++ b/chat.html
@@ -41,7 +41,7 @@
         </div>
         </div>
     </header>
-    <main class="chat">
+    <main class="chat-screen">
         <ul class="chat__messages">
             <span class="chat__timestamp">
                 Friday, January 11, 2019
@@ -54,9 +54,8 @@
                         Congrats I love you!
                     </div>
                 </div>
-                <span class="message__timestamp"></span>
             </li>
-            <li class="incoming-message message">
+            <li class="sent-message message">
                 <span class="message__timestamp"></span>
                 <div class="message__content">
                     <div class="message_bubble">
