--- a/chat.html
+++ b/chat.html
@@ -50,17 +50,34 @@
                 <img src="imgs/profile.jpg" class="m-avatar message__avatar" />
                 <div class="message__content">
                     <span class="mesaage__author">Best Friend</span>
-                    <div class="message_bubble">
+                    <span class="message_bubble">
                         Congrats I love you!
-                    </div>
+                    </span>
                 </div>
             </li>
             <li class="sent-message message">
                 <span class="message__timestamp"></span>
                 <div class="message__content">
-                    <div class="message_bubble">
+                    <span class="message_bubble">
                         Thank you
-                    </div>
+                    </span>
+                </div>
+            </li>
+            <li class="incoming-message message">
+                <img src="imgs/profile.jpg" class="m-avatar message__avatar" />
+                <div class="message__content">
+                    <span class="mesaage__author">Best Friend</span>
+                    <span class="message_bubble">
+                        ♥
+                    </span>
+                </div>
+            </li>
+            <li class="sent-message message">
+                <span class="message__timestamp"></span>
+                <div class="message__content">
+                    <span class="message_bubble">
+                        See you soon
+                    </span>
                 </div>
             </li>
         </ul>
