--- a/chat.html
+++ b/chat.html
@@ -100,6 +100,9 @@
             </span>
         </div>
     </div>
+    <div class="bigScreen">
+        <span class="bigScreen__text">Please make your screen smaller</span>
+    </div>
 </body>
 
 </html>
