--- a/index.html
+++ b/index.html
@@ -53,14 +53,115 @@
                                     Lynn
                                 </span>
                                 <span class="friend__bottom-text">
-                                    Going home!
+                                    See you soon
                                 </span>
                             </div>
                         </div>
                         <div class="friend__column">
                             <span class="chat__timestamp">
-                                March 8
+                                10:38
                             </span>
+                        </div>
+                    </div>
+                </a>
+            </li>
+            <li class="chats__chat chat">
+                <a href=#>
+                    <div class="chats__chat friend friend--lg">
+                        <div class="friend__column">
+                            <img src="imgs/profile.jpg" alt="" class="back-avatar friend__avatar_a">
+                            <img src="imgs/other.jpg" alt="" class="front-avatar friend__avatar_a">
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    Summer, Ji yoon
+                                </span>
+                                <span class="friend__bottom-text">
+                                    Challnge is so amazing!
+                                </span>
+                            </div>
+                        </div>
+                        <div class="friend__column">
+                            <div class="friend__content">
+                                <span class="chat__timestamp">
+                                    08:10
+                                </span>
+                                <span class="chat__badge">8</span>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </li>
+            <li class="chats__chat chat">
+                <a href=#>
+                    <div class="chats__chat friend friend--lg">
+                        <div class="friend__column">
+                            <img src="imgs/kakao.png" alt="" class="m-avatar friend__avatar">
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    Kakao Pages
+                                </span>
+                                <span class="friend__bottom-text">
+                                    [A New Webtoon is Updated]
+                                </span>
+                            </div>
+                        </div>
+                        <div class="friend__column">
+                            <div class="friend__content">
+                                <span class="chat__timestamp">
+                                    Yesterday
+                                </span>
+                                <span class="chat__badge">2</span>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </li>
+            <li class="chats__chat chat">
+                <a href=#>
+                    <div class="chats__chat friend friend--lg">
+                        <div class="friend__column">
+                            <img src="imgs/profile.jpg" alt="" class="m-avatar friend__avatar">
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    ♥엄마♥
+                                </span>
+                                <span class="friend__bottom-text">
+                                    엄마 잘 거야
+                                </span>
+                            </div>
+                        </div>
+                        <div class="friend__column">
+                            <div class="friend__content">
+                                <span class="chat__timestamp">
+                                    Yesterday
+                                </span>
+                                <span class="chat__badge">5</span>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+            </li>
+            <li class="chats__chat chat">
+                <a href=#>
+                    <div class="chats__chat friend friend--lg">
+                        <div class="friend__column">
+                            <img src="imgs/logo.jpg" alt="" class="m-avatar friend__avatar">
+                            <div class="friend__content">
+                                <span class="friend__name">
+                                    BTS
+                                </span>
+                                <span class="friend__bottom-text">
+                                    MAP OF THE SOUL TOUR 서울 공연 개최 안내
+                                </span>
+                            </div>
+                        </div>
+                        <div class="friend__column">
+                            <div class="friend__content">
+                                <span class="chat__timestamp">
+                                    January 22
+                                </span>
+                                <span class="chat__badge">3</span>
+                            </div>
                         </div>
                     </div>
                 </a>
@@ -76,7 +177,7 @@
             </li>
             <li class="nav__list-item">
                 <a href="index.html" class="nav__list-link">
-                    <div class="nav__badge">8</div>
+                    <div class="nav__badge">18</div>
                     <i class="fas fa-comment"></i>
                 </a>
             </li>
