--- a/more.html
+++ b/more.html
@@ -50,10 +50,10 @@
                     <img src="imgs/profile.jpg" alt="" class="g-avatar friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
-                            Nicolas Serrano
+                            Jeong Min
                         </span>
                         <span class="friend__status">
-                            euri12371@gmail.com
+                            go.jminn@gmail.com
                         </span>
                     </div>
                 </div>
@@ -117,6 +117,7 @@
             </li>
             <li class="nav__list-item">
                 <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">18</div>
                     <i class="far fa-comment"></i>
                 </a>
             </li>
