--- a/friends.html
+++ b/friends.html
@@ -49,10 +49,10 @@
                     <img src="imgs/profile.jpg" alt="" class="g-avatar friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
-                            Nicolas Serrano
+                            Jeong Min
                         </span>
                         <span class="friend__status">
-                            nomadcoders.co
+                            go.jminn@gmail.com
                         </span>
                     </div>
 
@@ -64,7 +64,7 @@
             <h5 class="friends__title">Plus friend</h5>
             <div class="friends__friend friend">
                 <div class="friend__column">
-                    <img src="imgs/profile.jpg" alt="" class="friend__avatar">
+                    <img src="imgs/plus.jpg" alt="" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             Plus Friend
@@ -91,7 +91,7 @@
                 <div class="friend__column">
                     <div class="friend__now-listening">
                         <span>
-                            BTS-Intro:What am I to you
+                            Let you Love Me - Rita Ora
                             <i class="fas fa-play"></i>
                         </span>
                     </div>
@@ -108,6 +108,7 @@
             </li>
             <li class="nav__list-item">
                 <a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">18</div>
                     <i class="far fa-comment"></i>
                 </a>
             </li>
