--- a/settings.html
+++ b/settings.html
@@ -44,21 +44,21 @@
             <ul class="settings__list">
                 <li class="settings__setting">
                     <span class="settings__icon">
-                        <i class="fas fa-lock"></i>
+                        <i class="fas fa-bullhorn"></i>
                     </span>
-                    <span class="settings__title">Privacy</span>
+                    <span class="settings__title">Notices</span>
                 </li>
                 <li class="settings__setting">
                     <span class="settings__icon">
-                        <i class="far fa-bell"></i>
+                        <i class="far fa-hdd"></i>
                     </span>
-                    <span class="settings__title">Notifications</span>
+                    <span class="settings__title">Kakao Lab</span>
                 </li>
                 <li class="settings__setting">
                     <span class="settings__icon">
-                        <i class="far fa-user"></i>
+                        <i class="fas fa-info-circle"></i>
                     </span>
-                    <span class="settings__title">Friends</span>
+                    <span class="settings__title">Version</span>
                 </li>
             </ul>
         </section>
@@ -81,6 +81,30 @@
                         <i class="far fa-user"></i>
                     </span>
                     <span class="settings__title">Friends</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="far fa-comment"></i>
+                    </span>
+                    <span class="settings__title">Chats</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="far fa-comments"></i>
+                    </span>
+                    <span class="settings__title">SMS Messages</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="fas fa-adjust"></i>
+                    </span>
+                    <span class="settings__title">Display</span>
+                </li>
+                <li class="settings__setting">
+                    <span class="settings__icon">
+                        <i class="fas fa-brush"></i>
+                    </span>
+                    <span class="settings__title">Theme</span>
                 </li>
             </ul>
         </section>
